# agents-as-mircroservice

./: client.py  pyproject.toml  requirements.py  server.py
