[tool.poetry]
name = "lr-llama-agents"
version = "0.1.0"
description = ""
authors = ["mahimairaja"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
llama-agents = "^0.0.12"
llama-index-agent-openai = "^0.2.9"
llama-index-embeddings-openai = "^0.1.11"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
